# dirty

./: Cargo.toml  README.md
src/: dirty_core.rs  dirty_ui.rs  main.rs
src/dirty_core/: audio_system.rs  buffer.rs  channel.rs  core.rs  input_system.rs  mod.rs  output_system.rs
