[package]
name = "dirty"
version = "0.1.0"
authors = ["amit"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cpal = "0.15.3"
eframe = "0.31.0"
itertools = "0.14.0"
rand = "0.9.0"
rayon = "1.10.0"
serde = "1.0.217"
strum_macros = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
